# GIS_TOOL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: windows-build.yml
cmake/: install_runtime_deps.cmake.in
docs/: GDAL_OpenCV_Cpp_功能清单.md  GIS_Tool_功能补充规划.md  GUI_CLI_底层对齐验证清单.md  build-baseline.md  classification算法移植计划.md  feature_stats算法移植计划.md  后续工作计划.md  当前功能与真实数据验证指南.md  构建与开发说明.md
docs/superpowers/plans/: 2026-04-24-project-stabilization-roadmap.md
docs/superpowers/specs/: 2026-04-22-gis-tool-plugin-architecture-design.md
docs/算法说明/: 总览.md
docs/算法说明/光谱指数/: ARVI.md  AWEI.md  BI.md  BSI.md  EVI.md  EVI2.md  GNDVI.md  MNDWI.md  NBR.md  NDBI.md  NDMI.md  NDVI.md  NDWI.md  OSAVI.md  SAVI.md  UI.md  自定义指数.md
docs/算法说明/几何校正与辐射处理/: C 校正.md  DOS 大气校正.md  Minnaert 校正.md  QUAC 大气校正.md  RPC 正射校正.md  余弦校正.md  控制点配准.md  辐射定标.md
docs/算法说明/分类统计/: SVM 分类.md  地物分类统计.md  最大似然分类.md  随机森林分类.md
docs/算法说明/地形分析/: TPI.md  TRI.md  剖面提取.md  剖面曲率.md  坡向.md  坡度.md  填挖方.md  填洼.md  (+11 more)
src/cli/: CMakeLists.txt  cli_parser.cpp  cli_parser.h  main.cpp
src/core/: CMakeLists.txt
src/core/include/gis/core/: error.h  gdal_wrapper.h  opencv_wrapper.h  progress.h  runtime_env.h  spindex_presets.h  types.h
src/core/src/: gdal_wrapper.cpp  opencv_wrapper.cpp  progress.cpp  runtime_env.cpp  spindex_presets.cpp  types.cpp
src/framework/: CMakeLists.txt
src/framework/include/gis/framework/: param_spec.h  plugin.h  plugin_manager.h  result.h
src/framework/src/: plugin_manager.cpp
src/gui/: CMakeLists.txt  crs_dialog.cpp  crs_dialog.h  custom_index_preset_store.cpp  custom_index_preset_store.h  execute_worker.cpp  execute_worker.h  gui_data_support.cpp  gui_data_support.h  main.cpp  mainwindow.cpp  mainwindow.h  nav_panel.cpp  nav_panel.h  param_card_widget.cpp  param_card_widget.h  param_widget.cpp  param_widget.h  preview_panel.cpp  preview_panel.h  progress_dialog.cpp  progress_dialog.h  qt_progress_reporter.cpp  qt_progress_reporter.h  style_constants.h
src/plugins/classification/: CMakeLists.txt  classification_plugin.cpp  classification_plugin.h
src/plugins/cutting/: CMakeLists.txt  cutting_plugin.cpp  cutting_plugin.h
src/plugins/feature_stats/: CMakeLists.txt  feature_stats_plugin.cpp  feature_stats_plugin.h
src/plugins/georef/: CMakeLists.txt  georef_plugin.cpp  georef_plugin.h
src/plugins/matching/: CMakeLists.txt  matching_plugin.cpp  matching_plugin.h
src/plugins/processing/: CMakeLists.txt  processing_plugin.cpp  processing_plugin.h
src/plugins/projection/: CMakeLists.txt  projection_plugin.cpp  projection_plugin.h
src/plugins/raster_inspect/: CMakeLists.txt  raster_inspect_plugin.cpp  raster_inspect_plugin.h
src/plugins/raster_manage/: CMakeLists.txt  raster_manage_plugin.cpp  raster_manage_plugin.h
src/plugins/raster_math/: CMakeLists.txt  raster_math_plugin.cpp  raster_math_plugin.h
src/plugins/raster_render/: CMakeLists.txt  raster_render_plugin.cpp  raster_render_plugin.h
src/plugins/spindex/: CMakeLists.txt  spindex_plugin.cpp  spindex_plugin.h
src/plugins/terrain/: CMakeLists.txt  terrain_plugin.cpp  terrain_plugin.h
src/plugins/utility/: CMakeLists.txt  utility_plugin.cpp  utility_plugin.h
src/plugins/vector/: CMakeLists.txt  vector_plugin.cpp  vector_plugin.h  vector_plugin_adjacency.inc  vector_plugin_boundary.inc  vector_plugin_buffer_clip.inc  vector_plugin_centroid.inc  vector_plugin_common.inc  vector_plugin_convex_hull.inc  vector_plugin_dangling_endpoint_check.inc  vector_plugin_dissolve.inc  vector_plugin_duplicate_point_check.inc  vector_plugin_endpoints_extract.inc  vector_plugin_envelope.inc  vector_plugin_geom_metrics.inc  vector_plugin_hole_check.inc  vector_plugin_info_filter.inc  vector_plugin_interior_point.inc  vector_plugin_midpoints_extract.inc  vector_plugin_multipart_check.inc  vector_plugin_nearest.inc  vector_plugin_overlap_check.inc  vector_plugin_overlay.inc  vector_plugin_overlay_support.inc  vector_plugin_raster_convert.inc  vector_plugin_repair.inc  vector_plugin_simplify.inc  vector_plugin_singlepart.inc  vector_plugin_sliver_remove.inc  vector_plugin_spatial_join.inc  vector_plugin_topology_check.inc  vector_plugin_vertices_extract.inc
tests/: CMakeLists.txt  gui_regression_helpers.cmake  gui_test_data_helper.cpp  run_gui_classification_feature_stats_regression.cmake  run_gui_classification_supervised_regression.cmake  run_gui_cutting_clip_regression.cmake  run_gui_cutting_merge_bands_regression.cmake  run_gui_cutting_mosaic_regression.cmake  run_gui_cutting_split_regression.cmake  run_gui_georef_dos_regression.cmake  run_gui_georef_gcp_register_regression.cmake  run_gui_georef_quac_regression.cmake  run_gui_georef_radiometric_regression.cmake  run_gui_georef_rpc_regression.cmake  run_gui_georef_topographic_regression.cmake  run_gui_invalid_param_regression.cmake  run_gui_matching_change_regression.cmake  run_gui_matching_corner_invalid_band_regression.cmake  run_gui_matching_corner_regression.cmake  run_gui_matching_detect_invalid_band_regression.cmake  run_gui_matching_detect_regression.cmake  run_gui_matching_ecc_register_debug_failure_regression.cmake  run_gui_matching_match_regression.cmake  run_gui_matching_register_regression.cmake  run_gui_matching_stitch_debug_failure_regression.cmake  run_gui_processing_band_math_regression.cmake  run_gui_processing_binary_regression.cmake  run_gui_processing_contour_regression.cmake  run_gui_processing_edge_regression.cmake  run_gui_processing_enhance_regression.cmake  run_gui_processing_filter_invalid_band_regression.cmake  run_gui_processing_filter_regression.cmake  run_gui_processing_gabor_regression.cmake  run_gui_processing_glcm_regression.cmake  run_gui_processing_hough_regression.cmake  run_gui_processing_kmeans_regression.cmake  run_gui_processing_mean_shift_regression.cmake  run_gui_processing_pansharpen_regression.cmake  run_gui_processing_stats_regression.cmake  run_gui_processing_template_match_regression.cmake  (+74 more)
tests/data/: gui_vector_input.geojson
tests/plugins/: test_lifecycle_plugin.cpp
(+74 files in other folders)
